# iris

./: .env.example  .justfile  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PLAN.md
crates/cli/: Cargo.toml
crates/cli/src/: event.rs  main.rs  tui.rs  widgets.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  main.rs  types.rs
crates/core/src/boot/: guardian.rs  mod.rs  safe_mode.rs
crates/core/src/capability/: db.rs  lifecycle.rs  mod.rs  process_manager.rs
crates/core/src/capability/builtin/: mod.rs  read_file.rs  run_bash.rs  write_file.rs
crates/core/src/codegen/: crate_permit.rs  db.rs  gap_generator.rs  mod.rs  prompt.rs  repair_loop.rs
crates/core/src/cognition/: arbitration.rs  direct_response.rs  fast_path.rs  mod.rs  perception.rs  response.rs  slow_path.rs  tool_call.rs
crates/core/src/dialogue/: commit_window.rs  context_version.rs  feedback.rs  interrupt.rs  mod.rs  topic_tracking.rs
crates/core/src/environment/: hardware.rs  mod.rs  system.rs  watcher.rs
crates/core/src/identity/: affect.rs  core_identity.rs  introspection.rs  mod.rs  narrative.rs  self_model.rs
crates/core/src/io/: input.rs  output.rs
crates/core/src/memory/: consolidation.rs  embedding.rs  episodic.rs  mod.rs  replay.rs  semantic.rs  working.rs
crates/core/src/resource_space/: admission.rs  budget.rs  mod.rs  pressure.rs
crates/core/src/runtime/: loop_control.rs  mod.rs  rest_cycle.rs  scheduler.rs  shutdown.rs
crates/core/src/sensory/: gating.rs  mod.rs  salience.rs
crates/core/src/thalamus/: router.rs
crates/core/tests/: integration.rs  system_integration.rs
crates/llm/: Cargo.toml
crates/llm/src/: http.rs  lib.rs  provider.rs
migrations/: 001_core_tables.sql  002_identity.sql  003_llm_config.sql  004_codegen.sql  005_learning.sql
