[workspace]
resolver = "3"
members = ["crates/cli", "crates/core", "crates/llm"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# types
uuid = { version = "1.21", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# http
reqwest = { version = "0.12", features = ["json"] }

# error handling
thiserror = "2"
anyhow = "1"

# code analysis
syn = { version = "2", features = ["full", "parsing"] }

# iris workspace crates
iris-core = { path = "crates/core" }
iris-llm = { path = "crates/llm" }
