[package]
name = "iris-cli"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
anyhow.workspace = true
tokio-util.workspace = true
iris-core.workspace = true
iris-llm.workspace = true
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
tui-markdown = "0.3"
ratatui-core = "0.1"
