[package]
name = "iris-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
syn.workspace = true
iris-llm.workspace = true
async-trait = "0.1"
tempfile = "3.25.0"
libc = "0.2"
