[package]
name = "core"
version.workspace = true
edition.workspace = true

[[bin]]
name = "iris"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
syn.workspace = true
llm.workspace = true
async-trait = "0.1"
tempfile = "3.25.0"
libc = "0.2"
rustyline = "14"
